--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-wolox": "^2.2.1",
     "prettier": "^1.15.3",
     "prettier-eslint": "^8.8.2",
-    "eslint-plugin-prettier": "^3.0.1"
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-import": "^2.17.3"
   }
 }
